<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.zyh.ddpunch.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <RelativeLayout
            android:id="@+id/relative"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <View
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:background="@drawable/circle_background"
                android:layout_centerInParent="true"/>
            <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_running"
                android:layout_centerInParent="true"
                android:textColor="#fff"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/tv1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp">
                <TextView
                    android:id="@+id/tv_cur_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cur_time"
                    android:textColor="#fff"/>
                <TextClock
                    android:id="@+id/time_state_local"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:format24Hour="@string/format24Hour"
                    style="@style/DebugText"/>
            </LinearLayout>


        </RelativeLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/version_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="5dp"
        android:text="@string/tv_version"
        android:textColor="#000"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/tv_note"
        android:textColor="@android:color/holo_red_dark"
        android:padding="10dp"/>
</LinearLayout>
